--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@fal-ai/serverless-client": "^0.15.0",
+    "@libsql/client": "^0.15.14",
     "next": "15.5.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "uploadthing": "^7.7.4"
   },
   "devDependencies": {
     "typescript": "^5",
